# Computer-Graphics-2025

./: .clang-format  .gitignore  CG-CW.code-workspace  CMakeLists.txt  CMakePresets.json  README.md  screenshot.ppm
libs/sdw/: DrawingWindow.cpp  DrawingWindow.h  TextureMap.cpp  Utils.cpp  Utils.h
model/: cornell-box.txt  material.mtl  material.txt  move_sphere.py  scene.txt  sphere.txt  sphere_generator.py  test-lighting.mtl  textured-cornell-box.mtl
model/cornell-box/: material.mtl  material.txt  scene.txt
model/light-gallery/: scene.txt
model/transparency-gallery/: scene.txt
src/: PhotonMap.cpp  PhotonMap.hpp  RedNoise.cpp  World.cpp  World.h  constants.hpp  containers.hpp  main.cpp  math_utils.hpp  photon_map.cpp  photon_map.hpp  rasterizer.cpp  rasterizer.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  scene_loader.cpp  scene_loader.hpp  shader.cpp  shader.hpp  thread_pool.hpp  utils.hpp  video_recorder.cpp  video_recorder.hpp  window.cpp  window.hpp  world.cpp  world.hpp
